--- a/09_genotyping.Rmd
+++ b/09_genotyping.Rmd
@@ -33,9 +33,9 @@ write_tsv(clusters %>% ungroup %>% select(transcript_id),file="hpc/genotypes/goo
 ```
 This was then used to create a bed file and read alignments overlapping this bed file were extracted for input to angsd. We then ran angsd to call SNPs and calculte genotype likelihoods.Analysis with angsd resulted in a total of 30289 SNPs.  These were then used for analysis with ngsRelate. Relevant commands are in;
 
-  - [01_prepare_inputs.sh](hpc/genotyping/01_prepare_inputs.sh)
-  - [02_angsd.sh](hpc/genotyping/02_angsd.sh)
-  - [03_ngsrelate.sh](hpc/genotyping/03_ngsrelate.sh)
+  - [01_prepare_inputs.sh](hpc/genotypes/01_prepare_inputs.sh)
+  - [02_angsd.sh](hpc/genotypes/02_angsd.sh)
+  - [03_ngsrelate.sh](hpc/genotypes/03_ngsrelate.sh)
 
 
 Although ngsRelate calculates many statistics the key statistic for our purposes is the relatedness statistic, theta.  For a diploid organism this statistic has a value of 0.5 for clones and should approach 0 for unrelated individuals.  In the figure below we show this value for all pairs of samples where samples numbered 0-5 are Pd and those numbered 6-11 are Pf.  It confirms our assumption that fragments from the same colony are clones (light blue) and fragments from different colonies have distinct (unrelated) genotypes.
